test/spec_vectors/local_set/fail/module_7.wat
(module (func $type-param-arg-num-vs-num (param f32) (local.set 0 (f64.const 0))))